Replace `RestTemplate` with `RestClient` (#1936)
Signed-off-by: BoykoAlex <alex.boyko@broadcom.com>